[heap] Make sure that we transition to MARKING when we are finalize SWEEPING.

BUG=chromium:601204
LOG=n

Review URL: https://codereview.chromium.org/1865333002

Cr-Commit-Position: refs/heads/master@{#35336}